# EmbeddedDeformation

./: CMakeLists.txt
include/: EDGraph.h  Optimizer.h  optimizer.h
src/: EDGraph.cpp  Optimizer.cpp  aa.cpp  main.cpp  optimizer.cpp
